--- a/lang/en.json
+++ b/lang/en.json
@@ -6,5 +6,6 @@
 	"heartbeats.now": "now",
 	"heartbeats.ago": "{{minutes}} minutes ago",
 	"monitor.uptime": "<b>{{pct}}%</b> uptime",
-	"dateformat": "M j, Y, g:i a"
+	"dateformat": "M j, Y, g:i a",
+	"footer.poweredby": "Powered by <b><a href=\"{{link}}\" target=\"_blank\">Uptime Status</a></b>"
 }
